p2ws_package/Devpp2ws-Package/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Investigation_Category__c</fullName>
        <label>Investigation Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Investigation_Department__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Booking through TG website</fullName>
                </value>
                <value>
                    <fullName>Ticket Receipt</fullName>
                </value>
                <value>
                    <fullName>BKK Reservation (Thai Contact Center)</fullName>
                </value>
                <value>
                    <fullName>Reservation System Service Management</fullName>
                </value>
                <value>
                    <fullName>Ticketing Dept.</fullName>
                </value>
                <value>
                    <fullName>Tickets issued at Larnluang Office</fullName>
                </value>
                <value>
                    <fullName>Tickets issued at Head office (Vibhavadee)</fullName>
                </value>
                <value>
                    <fullName>Tickets issued at Silom office</fullName>
                </value>
                <value>
                    <fullName>E-Ticketing</fullName>
                </value>
                <value>
                    <fullName>Airport Ticket Office</fullName>
                </value>
                <value>
                    <fullName>Refund office</fullName>
                </value>
                <value>
                    <fullName>Passenger Refund</fullName>
                </value>
                <value>
                    <fullName>Agency Sales</fullName>
                </value>
                <value>
                    <fullName>Airline Industry Relations</fullName>
                </value>
                <value>
                    <fullName>Check-in Landside - International</fullName>
                </value>
                <value>
                    <fullName>Check-in Landside - Domestic</fullName>
                </value>
                <value>
                    <fullName>Departure - Airside</fullName>
                </value>
                <value>
                    <fullName>BKK Station Manager / Duty Manager</fullName>
                </value>
                <value>
                    <fullName>Passenger Service</fullName>
                </value>
                <value>
                    <fullName>Service Delivery Support Dept.</fullName>
                </value>
                <value>
                    <fullName>Baggage Services Dept.</fullName>
                </value>
                <value>
                    <fullName>BKK Lounges</fullName>
                </value>
                <value>
                    <fullName>Lounges at abroad</fullName>
                </value>
                <value>
                    <fullName>Stations</fullName>
                </value>
                <value>
                    <fullName>Load Control</fullName>
                </value>
                <value>
                    <fullName>Ground Support Equipment Operations Control Dept.</fullName>
                </value>
                <value>
                    <fullName>CCTV at sorting area</fullName>
                </value>
                <value>
                    <fullName>Passenger Transport Dept.</fullName>
                </value>
                <value>
                    <fullName>Cabin Cleaning (TG)</fullName>
                </value>
                <value>
                    <fullName>Cabin Cleaning (Customer A/L)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Investigation_Department__c</fullName>
        <label>Investigation Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Abroad Stations</fullName>
                </value>
                <value>
                    <fullName>Bangkok Ramp Service</fullName>
                </value>
                <value>
                    <fullName>Bangkok Ticket &amp;	Reservation</fullName>
                </value>
                <value>
                    <fullName>Catering</fullName>
                </value>
                <value>
                    <fullName>Cockpit Crew</fullName>
                </value>
                <value>
                    <fullName>Ground Service at Bangkok Airport</fullName>
                </value>
                <value>
                    <fullName>In-Flight Products</fullName>
                </value>
                <value>
                    <fullName>In-Flight Service</fullName>
                </value>
                <value>
                    <fullName>Technical Service</fullName>
                </value>
                <value>
                    <fullName>Thai Smile Airline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Investigation_Other__c</fullName>
        <label>Investigation Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Expected_Flight__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Expected Flight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Progress_Date__c</fullName>
        <formula>((ActivityDate - (DATEVALUE(CreatedDate))) - (ActivityDate - Today())) + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Progress Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reply_Comment__c</fullName>
        <label>Reply Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SLA_Progress__c</fullName>
        <formula>IMAGE(&apos;/resource/1476948910000/BlueProgressBar&apos;, &apos;Test&apos;, 10, if(Progress_Date__c &lt;=4,Progress_Date__c ,4) * 10) &amp;
IF(Progress_Date__c &gt; 4,IMAGE(&apos;/resource/1476952717000/RedProgressBar&apos;, &apos;Test&apos;, 10, Progress_Date__c  * 10 - 40),&quot;&quot;) &amp;
IMAGE(&apos;/resource/1476964875000/ProgressBorder&apos;, &apos;Test&apos;, 10, 
((ActivityDate - DATEVALUE(CreatedDate))*10) - (Progress_Date__c * 10)) &amp;
&apos; &apos; &amp;
TEXT (Progress_Date__c) &amp;
&apos; days&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Progress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <label>Task Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Investigation</fullName>
                    <default>true</default>
                    <label>Investigation</label>
                </value>
                <value>
                    <fullName>Future Flight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Date__c</fullName>
        <label>Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>To_Investigation_Staff_Manager__c</fullName>
        <label>To Investigation Staff Manager</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>To_Investigation_Staff__c</fullName>
        <label>To Investigation Staff</label>
        <type>Email</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>ACTIVITY_SUBTYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.LOCATION</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
</CustomObject>